[package]
name = "ledsrace-logic"
version = "0.1.0"
edition = "2021"

[features]
use-std = []

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"] } # "1.3"
heapless = "0.8.0"
libm = "0.2.11"
embassy-time = { version = "0.4.0" }
embassy-sync = { version = "0.6.2" }
once_cell = { version = "1.21.3", default-features = false, features = ["critical-section"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
